# threat-intel-rag

./: .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: bd3c10536d9c_create_ingestion_records_table.py
docs/: project-brief.html
evals/: baseline_results.jsonl  diagnose_pool.py  golden_questions.jsonl  hybrid_results.jsonl  rerank_results.jsonl  run_baseline.py  validate_golden.py
src/threat_intel_rag/: app.py  cli.py  config.py
src/threat_intel_rag/db/: models.py
src/threat_intel_rag/ingestion/: hybrid_index.py  nvd_client.py  pipeline.py  qdrant_setup.py  tasks.py
src/threat_intel_rag/llm/: ollama.py  protocol.py
src/threat_intel_rag/query/: rag.py
