[project]
name = "threat-intel-rag"
version = "0.1.0"
description = "Production-grade Agentic RAG for cybersecurity threat intelligence"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "celery[rabbitmq]>=5.4.0",
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-ollama>=0.5.0",
    "qdrant-client[fastembed]>=1.9.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "fastembed>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.15.17",
    "mypy>=1.13.0",
    "bandit[toml]>=1.8.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threat_intel_rag"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["threat_intel_rag"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
skips = ["B101"]

[project.scripts]
threat-intel-rag = "threat_intel_rag.cli:main"
